--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 			<version>6.0.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
