--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,23 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.security.user.name=root
-spring.security.user.password=root
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect 
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Hyperx2021
+spring.jpa.defer-datasource-initialization=true
+
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# Show or not log for each sql query
+
+# schema will be automatically created afresh for every start of application
+
