Try to get the information from db , some exception which I will be fix. Tru to save info. in H2 and PostgresSql as well.

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
 			<version>6.0.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.1.214</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
@@ -78,16 +86,26 @@
 			<version>3.1.0.RELEASE</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.5.2</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<!--The app only needs the database and the JDBC driver at
+            runtime. The app doesn’t need them for compilation. To instruct Maven we
+            only want these dependencies at runtime,we add the scope tag with the
+            value “runtime.”-->
+			<scope>runtime</scope>
+		</dependency>
+
+
 	</dependencies>
 
 
