--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,25 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect 
+#spring.jpa.properties.hibernate.dialect =spring.jooq.sql-dialect=postgres
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.username=postgres
+#spring.datasource.password=Hyperx2021
+#spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Hyperx2021
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 # ===============================
