Migrate from Spring JDBC to Spring Data JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,15 +9,15 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-spring.jpa.properties.hibernate.dialect =spring.jooq.sql-dialect=postgres
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.show-sql=true
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=
+#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.username=postgres
 spring.datasource.password=Hyperx2021
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
