--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
             value “runtime.”-->
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
 
 
 	</dependencies>
