Auditing by Spring JPA inside web application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,8 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=
+#spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
