--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.username=postgres
 spring.datasource.password=Hyperx2021
+spring.jpa.properties.javax.persistence.validation.mode=none
 #spring.jpa.defer-datasource-initialization=true
 
 #spring.datasource.url=jdbc:h2:mem:testdb
