Add Jackson lib. Sending response in XML format in Rest Services

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
             value “runtime.”-->
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
