Spring Data Rest & HAl Explorer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port=8081
 #debug=true
-
+spring.data.rest.basePath=/data-api
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
