Logging Configuration inside SpringBoot and Properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 #server.port=8081
 #debug=true
+#trace=true
+
+logging.level.root=INFO
+#logging.level.com.eazybyte.springschoolproject.aspects=ERROR
+#logging.level.com.eazybyte.springschoolproject.controller=ERROR
+logging.group.eazyschool_error =  com.eazybyte.springschoolproject.aspects,com.eazybyte.springschoolproject.controller
+logging.level.eazyschool_error=ERROR  
+
+
+
 spring.data.rest.basePath=/data-api
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -19,20 +29,6 @@ spring.datasource.password=Hyperx2021
 spring.jpa.properties.javax.persistence.validation.mode=none
 #spring.jpa.defer-datasource-initialization=true
 
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-
-
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-# Show or not log for each sql query
-
-# schema will be automatically created afresh for every start of application
+eazyschool.pageSize=10
+eazyschool.contact.successMessages=Your message is submitted successfully 
 
