--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.username=postgres
-spring.datasource.password=Hyperx2021
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.properties.javax.persistence.validation.mode=none
 #spring.jpa.defer-datasource-initialization=true
 
