Reading properties using @Configuration.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,13 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 #spring.jpa.defer-datasource-initialization=true
 
 eazyschool.pageSize=10
-eazyschool.contact.successMessages=Your message is submitted successfully 
+
+eazyschool.contact.successMessages=Your message is submitted successfully
+#eazyschool.contact.pageSize=5
+
+eazyschool.branches[0]=NewYork
+eazyschool.branches[1]=Delhi
+eazyschool.branches[2]=Paris
+eazyschool.branches[3]=Singapore
+
 
