--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
 			<artifactId>spring-data-rest-hal-explorer</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 
 
