Implementation & Demo of Profiles inside Eazy School Web App

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.config.import=application_uat.properties, application_prod.properties
+spring.profiles.active=prod
+
 #server.port=8081
 #debug=true
 #trace=true
@@ -32,7 +35,7 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 eazyschool.pageSize=10
 
 eazyschool.contact.successMessages=Your message is submitted successfully
-#eazyschool.contact.pageSize=5
+eazyschool.contact.pageSize=5
 
 eazyschool.branches[0]=NewYork
 eazyschool.branches[1]=Delhi
