Implement and Secure Actuator inside Web App

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.config.import=application_uat.properties, application_prod.properties
 spring.profiles.active=prod
 
+management.endpoints.web.basePath=/eazyschool/actuator
+management.endpoints.web.exposure.include=*
+
 #server.port=8081
 #debug=true
 #trace=true
 
-logging.level.root=INFO
+#logging.level.root=INFO
 #logging.level.com.eazybyte.springschoolproject.aspects=ERROR
 #logging.level.com.eazybyte.springschoolproject.controller=ERROR
 logging.group.eazyschool_error =  com.eazybyte.springschoolproject.aspects,com.eazybyte.springschoolproject.controller
