Exploring Actuator data using Spring Boot Admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.profiles.active=prod
 
 management.endpoints.web.basePath=/eazyschool/actuator
 management.endpoints.web.exposure.include=*
+management.endpoint.env.showValues=ALWAYS
+management.health.defaults.enabled=false
+
+spring.application.name=EazySchool
+spring.boot.admin.client.url=http://localhost:9000
+spring.boot.admin.client.instance.metadata.user.name=
+spring.boot.admin..client.instance.metadata.user.password=
 
 #server.port=8081
 #debug=true
@@ -12,7 +19,7 @@ management.endpoints.web.exposure.include=*
 #logging.level.com.eazybyte.springschoolproject.aspects=ERROR
 #logging.level.com.eazybyte.springschoolproject.controller=ERROR
 logging.group.eazyschool_error =  com.eazybyte.springschoolproject.aspects,com.eazybyte.springschoolproject.controller
-logging.level.eazyschool_error=ERROR  
+logging.level.eazyschool_error=ERROR 
 
 
 
