--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,14 @@
 	<description>SpringSchoolProject</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-boot-admin-version>3.0.4</spring-boot-admin-version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -71,6 +73,19 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>3.0.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.micrometer/micrometer-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-micrometer</artifactId>
+			<version>6.1.6.Final</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
