Fix issues with email

--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -5,4 +5,4 @@ spring.jpa.properties.hibernate.format.sql=false
 
 logging.level.root=ERROR
 logging.level.com.eazybyte.springschoolproject.aspects=ERROR
-eazyschool.contact.pageSize=7
+#eazyschool.contact.pageSize=7
