--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,11 @@ spring.profiles.active=prod
 management.endpoints.web.basePath=/eazyschool/actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.env.showValues=ALWAYS
-management.health.defaults.enabled=false
 
 spring.application.name=EazySchool
 spring.boot.admin.client.url=http://localhost:9000
-spring.boot.admin.client.instance.metadata.user.name=
-spring.boot.admin..client.instance.metadata.user.password=
+spring.boot.admin.client.instance.metadata.user.name=admin@eazyschool.com
+spring.boot.admin..client.instance.metadata.user.password=admin
 
 #server.port=8081
 #debug=true
@@ -23,27 +22,22 @@ logging.level.eazyschool_error=ERROR
 
 
 
-spring.data.rest.basePath=/data-api
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=maxim20003244@gmail.com
+spring.mail.password=dhadicxsmpqsxook
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.username=
-spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://sql8.freemysqlhosting.net:3306/sql8621643
+spring.datasource.username=sql8621643
+spring.datasource.password=Vki7Mj3Chc
 spring.jpa.properties.javax.persistence.validation.mode=none
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 eazyschool.pageSize=10
-
 eazyschool.contact.successMessages=Your message is submitted successfully
 eazyschool.contact.pageSize=5
 
