Fix issues with dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,12 @@
 		<java.version>17</java.version>
 		<spring-boot-admin-version>3.0.4</spring-boot-admin-version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -104,10 +103,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<!--The app only needs the database and the JDBC driver at
-            runtime. The app doesn’t need them for compilation. To instruct Maven we
-            only want these dependencies at runtime,we add the scope tag with the
-            value “runtime.”-->
 			<scope>runtime</scope>
 		</dependency>
 
@@ -129,12 +124,9 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.1.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
+           <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 			<version>3.0.0</version>
@@ -149,6 +141,7 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 
 
 
