--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.config.import=application_uat.properties, application_prod.properties
 spring.profiles.active=prod
+spring.resources.add-mappings=true
 
 management.endpoints.web.basePath=/eazyschool/actuator
 management.endpoints.web.exposure.include=*
